# RAG

./: app.py  pyproject.toml
data/text_files/: machine_learning.txt  python_intro.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
